--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,6 +20,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+<!--                <li><a th:href="@{/${actionChoices.search}}">Search</a></li>-->
+<!--                <li><a th:href="@{/${actionChoices.list}}">List</a></li>-->
+
                 <li><a th:href="@{/search}">Search</a></li>
                 <li><a th:href="@{/list}">List</a></li>
             </ul>
