all bonus missions completed. Hyperlinks commented out.

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -23,19 +23,27 @@
             </tr>
             <tr>
                 <td class="h4">Employer</td>
-                <td style="color:blue"><a th:text="${job.employer}" th:href="@{/list/jobs(column='employer',value=${job.employer})}"></a></td>
+<!--                <td style="color:blue"><a th:text="${job.employer}" th:href="@{/list/jobs(column='employer',value=${job.employer})}"></a></td>-->
+                <td style="color:blue" th:text="${job.employer}"></td>
+
             </tr>
             <tr>
                 <td class="h4">Location</td>
-                <td style="color:blue"><a th:text="${job.location}" th:href="@{/list/jobs(column='location',value=${job.location})}"></a></td>
+<!--                <td style="color:blue"><a th:text="${job.location}" th:href="@{/list/jobs(column='location',value=${job.location})}"></a></td>-->
+                <td style="color:blue" th:text="${job.location}"></td>
+
             </tr>
             <tr>
                 <td class="h4">Position Type</td>
-                <td style="color:blue"><a th:text="${job.positionType}" th:href="@{/list/jobs(column='positionType',value=${job.positionType})}"></a></td>
+<!--                <td style="color:blue"><a th:text="${job.positionType}" th:href="@{/list/jobs(column='positionType',value=${job.positionType})}"></a></td>-->
+                <td style="color:blue" th:text="${job.positionType}"></td>
+
             </tr>
             <tr>
                 <td class="h4">Skill</td>
-                <td style="color:blue"><a th:text="${job.coreCompetency}" th:href="@{/list/jobs(column='coreCompetency',value=${job.coreCompetency})}"></a></td>
+<!--                <td style="color:blue"><a th:text="${job.coreCompetency}" th:href="@{/list/jobs(column='coreCompetency',value=${job.coreCompetency})}"></a></td>-->
+                <td style="color:blue" th:text="${job.coreCompetency}"></td>
+
             </tr>
 
         </table>
