--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,11 +20,13 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li th:each="action : ${actions}">
 <!--                <li><a th:href="@{/${actionChoices.search}}">Search</a></li>-->
 <!--                <li><a th:href="@{/${actionChoices.list}}">List</a></li>-->
-
-                <li><a th:href="@{/search}">Search</a></li>
-                <li><a th:href="@{/list}">List</a></li>
+                    <a th:href="@{'/' + ${action.key}}" th:text="${action.value}"></a>
+<!--                <li><a th:href="@{/search}">Search</a></li>-->
+<!--                <li><a th:href="@{/list}">List</a></li>-->
+                </li>
             </ul>
         </div>
     </div>
